# nf05_project_remake

./: CMakeLists.txt  exam.c  exam.h  main.c  patient_list_creation.c  patient_list_creation.h  patient_list_modification.c  patient_list_modification.h  standard_functions.c  standard_functions.h  struct.h
name_bank/: name.txt  surname.txt
